edit the wrong links

--- a/index1.html
+++ b/index1.html
@@ -95,7 +95,7 @@
 	
 	<div class="social-services">
           <!-- social services: tweet / google +1 / facebook like -->
-          <a href=https://zhouxiaowei1120.github.io/chs.html class="twitter-share-button" data-text="Interesting example of a Resume template" data-via="in_theme" data-align="right">中文版</a>
+          <a href=https://zxwedu.github.io/chs.html class="twitter-share-button" data-text="Interesting example of a Resume template" data-via="in_theme" data-align="right">中文版</a>
 		  <div class="wrap-g-plusone"><div class="g-plusone" data-size="medium"></div></div>
           <div class="wrap-fb-like">
           </div>
@@ -128,7 +128,7 @@
           </tr> -->
           <tr>
             <th>github：</th>
-            <td><a href="https://github.com/zhouxiaowei1120" target="_blank">https://github.com/zhouxiaowei1120</a></td>
+            <td><a href="https://github.com/zxwedu" target="_blank">https://github.com/zxwedu</a></td>
           </tr>
           <tr>
             <th>CSDN：</th>
@@ -202,7 +202,7 @@
                </p>
              </div>
              <p class="reference">
-               Project on Github: <a href="https://github.com/zhouxiaowei1120/HeightEstimation" target="_blank">HeightEstimation</a>
+               Project on Github: <a href="https://github.com/zxwedu/HeightEstimation" target="_blank">HeightEstimation</a>
              </br>
              </br>
                The Related Paper: <a href="./download/Heigh_map.pdf" target="_blank">Surface height map estimation from a single image using convolutional neural networks</a>
@@ -229,7 +229,7 @@
              </div>
              <p class="reference">
                Project on Github:
-               <a href="https://github.com/zhouxiaowei1120/GraduDesign" target="_blank">GraduDesign</a>
+               <a href="https://github.com/zxwedu/GraduDesign" target="_blank">GraduDesign</a>
               </br>
             </br>
               The Related Paper: <a href="./download/Tsunami.pdf" target="_blank">Visual Simulation for Tsunami and Disaster Risk Assessment</a>
@@ -351,23 +351,23 @@
 	   
         <p>
           <ul>
-              <li><a href="http://zhouxiaowei1120.github.io/blogs.html" target="_blank">Server configuration for deep learning</a><img src="t_files/new.gif" height="11px"></a></li>
+              <li><a href="http://zxwedu.github.io/blogs.html" target="_blank">Server configuration for deep learning</a><img src="t_files/new.gif" height="11px"></a></li>
               <br></br>
 
-            <li><a href="http://zhouxiaowei1120.github.io/blogs.html" target="_blank">Basic knowledge of Machine Learning</a><img src="t_files/new.gif" height="11px"></a></li>
+            <li><a href="http://zxwedu.github.io/blogs.html" target="_blank">Basic knowledge of Machine Learning</a><img src="t_files/new.gif" height="11px"></a></li>
               <br></br>
 
-            <li><a href="http://zhouxiaowei1120.github.io/blogs.html" target="_blank">Understand GAN</a><img src="t_files/new.gif" height="11px"></a></li>
+            <li><a href="http://zxwedu.github.io/blogs.html" target="_blank">Understand GAN</a><img src="t_files/new.gif" height="11px"></a></li>
               <br></br>
-            <li><a href="http://zhouxiaowei1120.github.io/blogs.html" target="_blank">Tensorflow Summary<img src="t_files/new.gif" height="11px"></a></li>
+            <li><a href="http://zxwedu.github.io/blogs.html" target="_blank">Tensorflow Summary<img src="t_files/new.gif" height="11px"></a></li>
             <br></br>
-            <li><a href="http://zhouxiaowei1120.github.io/blogs.html" target="_blank">Attention Mechanism</a></li>
+            <li><a href="http://zxwedu.github.io/blogs.html" target="_blank">Attention Mechanism</a></li>
             <br></br>
-            <li><a href="http://zhouxiaowei1120.github.io/blogs.html" target="_blank">Latest Works about Face Landmark Detection</a></li>
+            <li><a href="http://zxwedu.github.io/blogs.html" target="_blank">Latest Works about Face Landmark Detection</a></li>
             <br></br>
-            <li><a href="http://zhouxiaowei1120.github.io/blogs.html" target="_blank">Instructions about Latex Beamer</a></li>
+            <li><a href="http://zxwedu.github.io/blogs.html" target="_blank">Instructions about Latex Beamer</a></li>
             <br></br>
-            <li><a href="http://zhouxiaowei1120.github.io/blogs.html" target="_blank">Technical Blogs about Remote Connection Between Windows and Linux</a></li>
+            <li><a href="http://zxwedu.github.io/blogs.html" target="_blank">Technical Blogs about Remote Connection Between Windows and Linux</a></li>
             <br></br>
           </ul>
           <h4 style="margin-bottom:15px">All the blogs are now moved to CSDN website. 
